--- a/app/src/main/res/layout/fragment_security_amenities.xml
+++ b/app/src/main/res/layout/fragment_security_amenities.xml
@@ -67,6 +67,7 @@
                             android:id="@+id/rbDayGuard0"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
+                            android:clickable="@{!viewOnly}"
                             android:padding="@dimen/_10sdp"
                             android:tag="0"
                             android:text="@string/no" />
@@ -75,6 +76,7 @@
                             android:id="@+id/rbDayGuard1"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
+                            android:clickable="@{!viewOnly}"
                             android:padding="@dimen/_10sdp"
                             android:tag="1"
                             android:text="@string/_1_2" />
@@ -83,6 +85,7 @@
                             android:id="@+id/rbDayGuard2"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
+                            android:clickable="@{!viewOnly}"
                             android:padding="@dimen/_10sdp"
                             android:tag="2"
                             android:text="@string/_2_5" />
@@ -91,6 +94,7 @@
                             android:id="@+id/rbDayGuard3"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
+                            android:clickable="@{!viewOnly}"
                             android:padding="@dimen/_10sdp"
                             android:tag="3"
                             android:text="@string/above_5" />
@@ -124,6 +128,7 @@
                             android:id="@+id/rbNightGuard0"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
+                            android:clickable="@{!viewOnly}"
                             android:padding="@dimen/_10sdp"
                             android:tag="0"
                             android:text="@string/no" />
@@ -132,6 +137,7 @@
                             android:id="@+id/rbNightGuard1"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
+                            android:clickable="@{!viewOnly}"
                             android:padding="@dimen/_10sdp"
                             android:tag="1"
                             android:text="@string/_1_2" />
@@ -140,6 +146,7 @@
                             android:id="@+id/rbNightGuard2"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
+                            android:clickable="@{!viewOnly}"
                             android:padding="@dimen/_10sdp"
                             android:tag="2"
                             android:text="@string/_2_5" />
@@ -148,6 +155,7 @@
                             android:id="@+id/rbNightGuard3"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
+                            android:clickable="@{!viewOnly}"
                             android:padding="@dimen/_10sdp"
                             android:tag="3"
                             android:text="@string/above_5" />
@@ -181,6 +189,7 @@
                             android:id="@+id/rbPoliceVerificationYes"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
+                            android:clickable="@{!viewOnly}"
                             android:padding="@dimen/_10sdp"
                             android:tag="true"
                             android:text="@string/yes" />
@@ -189,6 +198,7 @@
                             android:id="@+id/rbPoliceVerificationNo"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
+                            android:clickable="@{!viewOnly}"
                             android:padding="@dimen/_10sdp"
                             android:tag="false"
                             android:text="@string/no" />
@@ -201,6 +211,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="@dimen/_150sdp"
                     android:background="@color/grey_light"
+                    android:clickable="@{!viewOnly}"
                     android:visibility="@{rbPoliceVerificationYes.checked ? View.VISIBLE : View.GONE}">
 
                     <LinearLayout
@@ -264,6 +275,7 @@
                             android:id="@+id/rbIndoorCameraYes"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
+                            android:clickable="@{!viewOnly}"
                             android:padding="@dimen/_10sdp"
                             android:tag="1"
                             android:text="@string/yes" />
@@ -272,6 +284,7 @@
                             android:id="@+id/rbIndoorCameraNo"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
+                            android:clickable="@{!viewOnly}"
                             android:padding="@dimen/_10sdp"
                             android:tag="0"
                             android:text="@string/no" />
@@ -289,6 +302,7 @@
                             android:id="@+id/rb12IndCam"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
+                            android:clickable="@{!viewOnly}"
                             android:padding="@dimen/_10sdp"
                             android:tag="1"
                             android:text="@string/_1_2" />
@@ -297,6 +311,7 @@
                             android:id="@+id/rb25IndCam"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
+                            android:clickable="@{!viewOnly}"
                             android:padding="@dimen/_10sdp"
                             android:tag="2"
                             android:text="@string/_2_5" />
@@ -305,6 +320,7 @@
                             android:id="@+id/rb5aboveIndCam"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
+                            android:clickable="@{!viewOnly}"
                             android:padding="@dimen/_10sdp"
                             android:tag="3"
                             android:text="@string/above_5" />
@@ -317,6 +333,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:background="@color/grey_light"
+                    android:clickable="@{!viewOnly}"
                     android:visibility="@{rbIndoorCameraYes.checked ? View.VISIBLE : View.GONE}">
 
                     <LinearLayout
@@ -384,11 +401,13 @@
                             android:id="@+id/rbOutdoorCameraYes"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
+                            android:clickable="@{!viewOnly}"
                             android:padding="@dimen/_10sdp"
                             android:text="@string/yes" />
 
                         <RadioButton
                             android:id="@+id/rbOutdoorCameraNo"
+                            android:clickable="@{!viewOnly}"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:padding="@dimen/_10sdp"
@@ -409,6 +428,7 @@
                             android:layout_height="wrap_content"
                             android:padding="@dimen/_10sdp"
                             android:tag="1"
+                            android:clickable="@{!viewOnly}"
                             android:text="@string/_1_2" />
 
                         <RadioButton
@@ -416,6 +436,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:padding="@dimen/_10sdp"
+                            android:clickable="@{!viewOnly}"
                             android:tag="2"
                             android:text="@string/_2_5" />
 
@@ -424,6 +445,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:padding="@dimen/_10sdp"
+                            android:clickable="@{!viewOnly}"
                             android:tag="3"
                             android:text="@string/above_5" />
 
@@ -434,6 +456,7 @@
                     android:id="@+id/frameOutDoorCamera"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:clickable="@{!viewOnly}"
                     android:visibility="@{rbOutdoorCameraYes.checked ? View.VISIBLE : View.GONE}">
 
                     <LinearLayout
@@ -494,7 +517,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:clickable="true"
-                android:visibility="@{viewOnly ? View.VISIBLE : View.GONE}" />
+                android:visibility="gone" />
 
         </FrameLayout>
     </androidx.core.widget.NestedScrollView>
