--- a/app/src/main/res/layout/fragment_washroom_amenities.xml
+++ b/app/src/main/res/layout/fragment_washroom_amenities.xml
@@ -62,6 +62,7 @@
                         <RadioButton
                             android:id="@+id/rbOpenYes"
                             android:layout_width="wrap_content"
+                            android:clickable="@{!viewOnly}"
                             android:layout_height="wrap_content"
                             android:padding="@dimen/_10sdp"
                             android:text="@string/outdoor" />
@@ -70,6 +71,7 @@
                             android:id="@+id/rbOpenNo"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
+                            android:clickable="@{!viewOnly}"
                             android:padding="@dimen/_10sdp"
                             android:text="@string/indoor" />
 
@@ -100,6 +102,7 @@
                             android:id="@+id/rbHotWaterYes"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
+                            android:clickable="@{!viewOnly}"
                             android:padding="@dimen/_10sdp"
                             android:text="@string/yes" />
 
@@ -107,6 +110,7 @@
                             android:id="@+id/rbHotWaterNo"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
+                            android:clickable="@{!viewOnly}"
                             android:padding="@dimen/_10sdp"
                             android:text="@string/no" />
 
@@ -136,6 +140,7 @@
                         <RadioButton
                             android:id="@+id/rbCleanerYes"
                             android:layout_width="wrap_content"
+                            android:clickable="@{!viewOnly}"
                             android:layout_height="wrap_content"
                             android:padding="@dimen/_10sdp"
                             android:text="@string/yes" />
@@ -144,6 +149,7 @@
                             android:id="@+id/rbCleanerNo"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
+                            android:clickable="@{!viewOnly}"
                             android:padding="@dimen/_10sdp"
                             android:text="@string/no" />
 
@@ -153,6 +159,7 @@
                 <FrameLayout
                     android:id="@+id/flWashroomPhoto"
                     android:layout_width="match_parent"
+                    android:clickable="@{!viewOnly}"
                     android:layout_height="wrap_content"
                     android:background="@color/grey_light">
 
@@ -160,6 +167,7 @@
                         android:id="@+id/llWashroomPhoto"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:clickable="@{!viewOnly}"
                         android:gravity="center"
                         android:orientation="vertical"
                         android:padding="20dp">
@@ -206,7 +214,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:clickable="true"
-                android:visibility="@{viewOnly ? View.VISIBLE : View.GONE}" />
+                android:visibility="gone" />
 
         </FrameLayout>
     </androidx.core.widget.NestedScrollView>
