--- a/app/src/main/res/layout/activity_view_dhaba.xml
+++ b/app/src/main/res/layout/activity_view_dhaba.xml
@@ -93,16 +93,15 @@
                         android:textColor="@color/grey"
                         android:textSize="@dimen/_12ssp" />
 
-                    <!--
-                                        <androidx.appcompat.widget.AppCompatTextView
-                                            android:layout_width="wrap_content"
-                                            android:layout_height="wrap_content"
-                                            android:layout_marginTop="@dimen/_10sdp"
-                                            android:fontFamily="@font/opensans_regular"
-                                            android:text="Open 6am to 8pm"
-                                            android:textColor="@color/black"
-                                            android:textSize="@dimen/_12ssp" />
-                    -->
+                    <androidx.appcompat.widget.AppCompatTextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="@dimen/_10sdp"
+                        android:fontFamily="@font/opensans_regular"
+                        android:text="@string/open_24_x_7"
+                        android:textColor="@color/black"
+                        android:textSize="@dimen/_12ssp"
+                        android:visibility="@{dhabaModelMain.dhabaModel.open247 ? View.VISIBLE : View.GONE}" />
 
                     <View
                         android:layout_width="match_parent"
